# mtxclient

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  appveyor.yml  codecov.yml  meson.build  meson_options.txt
.ci/: adjust-config.sh  boost.sh  coverage.sh  homeserver.yaml  install.sh  script.sh
.ci/macos/: Brewfile
.ci/synapse/: Dockerfile  entrypoint.sh  setup-synapse.sh
.ci/synapse/service/postgresql/: run
.ci/synapse/service/synapse/: run
.ci/windows/: build.bat
cmake/: Boost.cmake  Findolm.cmake  Findsodium.cmake  GoogleTest.cmake  MatrixClientConfig.cmake.in  MatrixStructs.cmake  Olm.cmake  SpdLog.cmake
cmake/Hunter/: config.cmake
docs/: dirs.dox  index.md
examples/: CMakeLists.txt  Makefile  cmake_install.cmake  crypto_bot.cpp  media_downloader.cpp  memberstats.cpp  meson.build  online_backup_exporter.cpp  plot_history.py  restore_secret_storage.cpp  room_feed.cpp  simple_bot.cpp
include/: mtx.hpp
include/mtx/: common.hpp  errors.hpp  events.hpp  events_impl.hpp  filters.hpp  identifiers.hpp  lightweight_error.hpp  log.hpp  public_rooms_chunk.hpp  pushrules.hpp  requests.hpp  responses.hpp  secret_storage.hpp  user_interactive.hpp
include/mtx/events/: aliases.hpp  avatar.hpp  canonical_alias.hpp  collections.hpp  common.hpp  create.hpp  encrypted.hpp  encryption.hpp  event_type.hpp  guest_access.hpp  history_visibility.hpp  join_rules.hpp  member.hpp  name.hpp  pinned_events.hpp  policy_rules.hpp  power_levels.hpp  presence.hpp  reaction.hpp  redaction.hpp  server_acl.hpp  spaces.hpp  tag.hpp  tombstone.hpp  topic.hpp  unknown.hpp  voip.hpp  widget.hpp
include/mtx/events/account_data/: direct.hpp  fully_read.hpp  ignored_users.hpp
include/mtx/events/ephemeral/: fully_read.hpp  receipt.hpp  typing.hpp
include/mtx/events/messages/: audio.hpp  confetti.hpp  ducktypes_to_text.hpp  elementeffect.hpp  emote.hpp  file.hpp  image.hpp  location.hpp  notice.hpp  text.hpp  unknown.hpp  video.hpp
include/mtx/events/mscs/: image_packs.hpp
include/mtx/events/nheko_extensions/: event_expiry.hpp  hidden_events.hpp  invite_permissions.hpp
include/mtx/responses/: capabilities.hpp  common.hpp  create_room.hpp  crypto.hpp  device.hpp  empty.hpp  groups.hpp  login.hpp  media.hpp  members.hpp  messages.hpp  notifications.hpp  profile.hpp  public_rooms.hpp  register.hpp  sync.hpp  turn_server.hpp  users.hpp  version.hpp  well-known.hpp
include/mtxclient/: utils.hpp
include/mtxclient/crypto/: client.hpp  objects.hpp  types.hpp  utils.hpp
include/mtxclient/http/: asio_overrides.hpp  client.hpp  client_impl.hpp  errors.hpp  session.hpp
lib/: log.cpp  utils.cpp
lib/crypto/: client.cpp  encoding.cpp  types.cpp  utils.cpp
lib/http/: client.cpp  session.cpp
lib/structs/: common.cpp  errors.cpp  events.cpp  identifiers.cpp  pushrules.cpp  requests.cpp  secret_storage.cpp  user_interactive.cpp
lib/structs/events/: aliases.cpp  avatar.cpp  canonical_alias.cpp  collections.cpp  common.cpp  create.cpp  encrypted.cpp  encryption.cpp  guest_access.cpp  history_visibility.cpp  join_rules.cpp  member.cpp  name.cpp  pinned_events.cpp  policy_rules.cpp  power_levels.cpp  presence.cpp  reaction.cpp  redaction.cpp  server_acl.cpp  spaces.cpp  tag.cpp  tombstone.cpp  topic.cpp  unknown.cpp  voip.cpp  widget.cpp
lib/structs/events/account_data/: direct.cpp  fully_read.cpp  ignored_users.cpp
lib/structs/events/ephemeral/: fully_read.cpp  receipt.cpp  typing.cpp
lib/structs/events/messages/: audio.cpp  confetti.cpp  ducktypes_to_text.cpp  elementeffect.cpp  emote.cpp  file.cpp  image.cpp  location.cpp  notice.cpp  text.cpp  unknown.cpp  video.cpp
lib/structs/events/mscs/: image_packs.cpp
lib/structs/events/nheko_extensions/: event_expiry.cpp  hidden_events.cpp  invite_permissions.cpp
lib/structs/responses/: capabilities.cpp  common.cpp  create_room.cpp  crypto.cpp  device.cpp  empty.cpp  groups.cpp  login.cpp  media.cpp  members.cpp  messages.cpp  notifications.cpp  profile.cpp  public_rooms.cpp  register.cpp  sync.cpp  turn_server.cpp  users.cpp  version.cpp  well-known.cpp
src/: client.cpp  client.hpp  crypto.cpp  crypto.hpp  errors.hpp  session.cpp  session.hpp  utils.cpp  utils.hpp
subprojects/: Olm.wrap  coeurl.wrap  curl.wrap  libevent.wrap  nlohmann_json.wrap  openssl.wrap  re2.wrap  spdlog.wrap
subprojects/olm-wrap/: meson.build
subprojects/packagefiles/openssl-meson/: meson.build
tests/: CMakeLists.txt  client_api.cpp  connection.cpp  crypto.cpp  device.cpp  e2ee.cpp  errors.cpp  events.cpp  identifiers.cpp  media_api.cpp  meson.build  messages.cpp  pushrules.cpp  requests.cpp  responses.cpp  test_helpers.hpp  utils.cpp  voip.cpp
tests/fixtures/responses/: sync.json  sync_with_crypto.json
